Clean up style for content visibility issues

--- a/src/style/_blocks.scss
+++ b/src/style/_blocks.scss
@@ -57,37 +57,42 @@
 
   @include tablet-landscape-up { 
     width: 50vw;
-    margin-top: -170px;
-    &:first-of-type { margin-top: -800px; }
+    margin-top: -100px;
+    &:first-of-type { margin-top: -900px; }
   }
 
   .arrow {
-    font-size: 4rem;
-    color: inherit;
-    position: absolute;
-
-    &.right {
-      transform: rotate(0) translateY(-50%);
-      top: 50%;
-      left: -200px;
-    }
-
-    &.left {
-      transform: rotate(180deg) translateY(-50%);
-      top: 25%;
-      right: -202px;
-    }
-
-    &:after {
-      content: '';
-      border-width: 5px;
-      border-style: dashed;
-      border-color: inherit;
+    display: none;
+    
+    @include tablet-landscape-up { 
+      display: block;
+      font-size: 4rem;
+      color: inherit;
       position: absolute;
-      height: 0;
-      width: 175px;
-      top: 1.6rem;
-      left: 1.6rem;
+
+      &.right {
+        transform: rotate(0) translateY(-50%);
+        top: 50%;
+        left: -200px;
+      }
+
+      &.left {
+        transform: rotate(180deg) translateY(-50%);
+        top: 25%;
+        right: -202px;
+      }
+
+      &:after {
+        content: '';
+        border-width: 5px;
+        border-style: dashed;
+        border-color: inherit;
+        position: absolute;
+        height: 0;
+        width: 175px;
+        top: 1.6rem;
+        left: 1.6rem;
+      }
     }
   }
 
@@ -130,7 +135,7 @@
     position: absolute;
     transform: rotate(-45deg);
     width: 600px;
-    max-width: 100vw;
+    max-width: 80vw;
     color: black;
     padding: 1rem;
     left: 80px;
@@ -138,20 +143,17 @@
     background: $colour-5;
     border-radius: 20px 20px 20px 0px;
 
-
     h3 { font-size: 1.5rem; }
     p { font-size: 1.4rem; }
     
     @include tablet-portrait-up { 
-      left: 220px;
-      top: 236px;
+      left: 197px;
+      top: 272px;
       width: 500px;
      }
     @include tablet-landscape-up { 
-      // left: 249px;
-      // top: -296px;
       left: 149px;
-    top: 193px;
+      top: 193px;
     }
     @include desktop-up { 
       left: 401px;
@@ -162,14 +164,14 @@
   &.right .text {
     position: absolute;
     transform: rotate(45deg);
-    left: -100px;
-    top: 100px;
+    left: -40px;
+    top: 159px;
     background: $colour-5;
     border-radius: 20px 20px 0px 20px;
 
     @include tablet-portrait-up { 
-      bottom: 66px;
-      right: 148px; 
+      bottom: 41px;
+      right: 119px;
       left: unset;
       top: unset;
     }
