--- a/src/style/_chat.scss
+++ b/src/style/_chat.scss
@@ -2,7 +2,7 @@
   position: relative;
   max-width: calc(100vw - 2rem);
   width: 500px;
-  margin: 0 1rem;
+  margin: 0 1rem 3rem;
 
   .bubble {
     width: 80%;
